// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateNavigationConfig test standard config + additional content 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "label": "Add",
        "path": "/test/npm-package/add",
        "type": "md",
      },
      Object {
        "label": "File",
        "path": "/test/npm-package/file",
        "type": "js",
      },
      Object {
        "label": "File Outside",
        "path": "/test/npm-package/file-outside",
        "type": "md",
      },
    ],
    "label": "Test",
    "path": "/test",
  },
]
`;

exports[`generateNavigationConfig test standard config + additional content 2`] = `
Object {
  "/": "/test/npm-package/add",
  "/test": "/test/npm-package/add",
}
`;

exports[`generateNavigationConfig test standard config + additional content 3`] = `
Object {
  "/test/npm-package/add": Object {
    "label": "Add",
    "type": "md",
  },
  "/test/npm-package/file": Object {
    "label": "File",
    "type": "js",
  },
  "/test/npm-package/file-outside": Object {
    "label": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "label": "File",
        "path": "/test/npm-package/file",
        "type": "js",
      },
      Object {
        "label": "File Outside",
        "path": "/test/npm-package/file-outside",
        "type": "md",
      },
    ],
    "label": "Test",
    "path": "/test",
  },
]
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 2`] = `
Object {
  "/": "/test/npm-package/file",
  "/test": "/test/npm-package/file",
}
`;

exports[`generateNavigationConfig tests additionalSearchDirectories 3`] = `
Object {
  "/test/npm-package/file": Object {
    "label": "File",
    "type": "js",
  },
  "/test/npm-package/file-outside": Object {
    "label": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests multiple primary nav items 1`] = `
Array [
  Object {
    "label": "Test",
    "pageConfig": Object {
      "label": "File",
      "path": "/test/npm-package/file",
      "type": "js",
    },
    "path": "/test",
  },
  Object {
    "label": "Doc",
    "pageConfig": Object {
      "label": "File",
      "path": "/doc/npm-package/file",
      "type": "js",
    },
    "path": "/doc",
  },
]
`;

exports[`generateNavigationConfig tests multiple primary nav items 2`] = `
Object {
  "/": "/test/npm-package/file",
  "/doc": "/doc/npm-package/file",
  "/test": "/test/npm-package/file",
}
`;

exports[`generateNavigationConfig tests multiple primary nav items 3`] = `
Object {
  "/doc/npm-package/file": Object {
    "label": "File",
    "type": "js",
  },
  "/test/npm-package/file": Object {
    "label": "File",
    "type": "js",
  },
}
`;

exports[`generateNavigationConfig tests prod mode 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "label": "File",
        "path": "/test/npm-package/file",
        "type": "js",
      },
      Object {
        "label": "File Outside",
        "path": "/test/npm-package/file-outside",
        "type": "md",
      },
    ],
    "label": "Test",
    "path": "/test",
  },
]
`;

exports[`generateNavigationConfig tests prod mode 2`] = `
Object {
  "/": "/test/npm-package/file",
  "/test": "/test/npm-package/file",
}
`;

exports[`generateNavigationConfig tests prod mode 3`] = `
Object {
  "/test/npm-package/file": Object {
    "label": "File",
    "type": "js",
  },
  "/test/npm-package/file-outside": Object {
    "label": "File Outside",
    "type": "md",
  },
}
`;

exports[`generateNavigationConfig tests sorting 1`] = `
Array [
  Object {
    "children": Array [
      Object {
        "label": "First File",
        "path": "/test/npm-package/first-file",
        "type": "js",
      },
      Object {
        "label": "Second File",
        "path": "/test/npm-package/second-file",
        "type": "js",
      },
      Object {
        "children": Array [
          Object {
            "label": "File",
            "path": "/test/npm-package/dir/file",
            "type": "js",
          },
        ],
        "label": "Dir",
      },
      Object {
        "label": "A",
        "path": "/test/npm-package/a",
        "type": "js",
      },
      Object {
        "children": Array [
          Object {
            "label": "File",
            "path": "/test/npm-package/b/file",
            "type": "js",
          },
        ],
        "label": "B",
      },
    ],
    "label": "Test",
    "path": "/test",
  },
]
`;

exports[`generateNavigationConfig tests sorting 2`] = `
Object {
  "/": "/test/npm-package/first-file",
  "/test": "/test/npm-package/first-file",
}
`;

exports[`generateNavigationConfig tests sorting 3`] = `
Object {
  "/test/npm-package/a": Object {
    "label": "A",
    "type": "js",
  },
  "/test/npm-package/b/file": Object {
    "label": "File",
    "type": "js",
  },
  "/test/npm-package/dir/file": Object {
    "label": "File",
    "type": "js",
  },
  "/test/npm-package/first-file": Object {
    "label": "First File",
    "type": "js",
  },
  "/test/npm-package/second-file": Object {
    "label": "Second File",
    "type": "js",
  },
}
`;
